# beta-graph

./: .gitignore  Dockerfile  GITHUB_DUAL_ACCOUNT_SETUP.md  README.md  gcp-setup.sh  mcp.json  pyproject.toml
.cursor/rules/: agent.mdc
docs/: ARCHITECTURE.md  GCP_DEPLOYMENT.md  LAZY_SCRAPE_VERIFICATION.md  MCP_MANUAL_SERVERS.md  MCP_SETUP.md
keys/: README.md
scripts/: check_chroma_artist_point.py  check_geocode.py  cleanup_trails_without_location.py  clear_chroma.py  inspect_chroma.py  load_san_juan_trails.py  load_trails_to_chroma.py  load_wta_by_region.py  load_wta_to_chroma.py  north_bend_trails_new.json  run_agent.py  run_agent_wta.py  run_servers.py  scrape_north_bend.py  scrape_yosemite_climbing.py  test_scrape.py  test_scrape_requests.py  verify_lazy_scrape.py
scripts/outputs/: requests_trails.json  yosemite_trails.json  yosemite_trails_new.json
src/beta_graph/: __init__.py
src/beta_graph/agent/: __init__.py  graph.py  graph_wta.py  tools.py
src/beta_graph/servers/: __init__.py  combined_server.py
src/beta_graph/servers/alltrails/: README.md  __init__.py  chroma_store.py  config.py  cookies.py  models.py  scraper.py  server.py  trail_detail.py  validate.py
src/beta_graph/servers/geocode/: __init__.py  geocode.py
src/beta_graph/servers/weather/: __init__.py  config.py  forecast.py  server.py
src/beta_graph/servers/wta/: README.md  __init__.py  chroma_store.py  config.py  handlers.py  models.py  scraper.py  server.py
src/beta_graph/shared/: __init__.py  chroma.py  config.py
src/documentation/: README.md
tests/: test_alltrails_explore.py
