[project]
name = "beta-graph"
version = "0.1.0"
description = "Climbing route planner using AI - AllTrails trails MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "geopy>=2.4.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
beta-graph-mcp = "beta_graph.servers.alltrails.server:main"
alltrails-mcp = "beta_graph.servers.alltrails.server:main"
weather-mcp = "beta_graph.servers.weather.server:main"
beta-graph = "beta_graph.servers.combined_server:main"
beta-graph-agent = "beta_graph.agent.graph:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beta_graph"]
