[project]
name = "beta-graph"
version = "0.1.0"
description = "Washington hiking trail planner using AI - WTA trails MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "langchain-mcp-adapters>=0.1.0",
    "geopy>=2.4.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
weather-mcp = "beta_graph.servers.weather.server:main"
wta-mcp = "beta_graph.servers.wta.server:main"
beta-graph-agent = "beta_graph.agent.graph:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beta_graph"]
